deploy/base/openehr-nodes/test/transform-rest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-transform-rest
  namespace: dh-health
  labels:
    app: test-transform-rest
spec:
  selector:
    matchLabels:
      app: test-transform-rest
  template:
    metadata:
      labels:
        app: test-transform-rest
    spec:
      containers:
      - name: test-transform-rest
        image: registry.prod.dh.unimaas.nl/docker-health/transform-rest:latest
        ports:
        - containerPort: 8080
        env:
          - name: TRANSFORM_SPRING_USERNAME
            valueFrom:
              secretKeyRef:
                name: test-transform-creds
                key: username
          - name: TRANSFORM_SPRING_PASSWORD
            valueFrom:
              secretKeyRef:
                name: test-transform-creds
                key: password
        envFrom:
        - configMapRef:
            name: timezone-config
        - configMapRef:
            name: transform-rest-config
        - configMapRef:
            name: zib-templates-config
