deploy/base/openehr-nodes/test/transform-rest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-transform-rest
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: test-transform-rest
